syntax = "proto3";

option csharp_namespace = "EPlusActivities.Grpc.Messages.FileService";

message UploadFileGrpcRequest
{
  string owner_id = 1;
  string key = 2;
  string content_type = 3;
  string file_name = 4;
  bytes content = 5;
  bool is_static = 6;
}

message UploadFileGrpcResponse
{
  bool succeeded = 1;
}
